// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with form options elevation 0 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-17 makeStyles-vertical-18 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 0 with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-21 makeStyles-horizontal-23 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 1 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-25 makeStyles-vertical-26 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation 1 with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-29 makeStyles-horizontal-31 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation undefined 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-33 makeStyles-vertical-34 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options elevation undefined with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-37 makeStyles-horizontal-39 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        dynamic_form
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon person 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-1 makeStyles-vertical-2 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        person
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon person with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-5 makeStyles-horizontal-7 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      >
        person
      </span>
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon undefined 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-9 makeStyles-vertical-10 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      />
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;

exports[`renders with form options icon undefined with layout 1`] = `
<div>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root makeStyles-root-13 makeStyles-horizontal-15 MuiListItem-gutters MuiListItem-button"
    role="button"
    tabindex="0"
  >
    <div
      class="MuiListItemIcon-root"
    >
      <span
        aria-hidden="true"
        class="material-icons MuiIcon-root MuiIcon-fontSizeSmall"
      />
    </div>
    <div
      class="MuiListItemText-root MuiListItemText-multiline"
    >
      <span
        class="MuiTypography-root MuiListItemText-primary MuiTypography-body1 MuiTypography-noWrap MuiTypography-displayBlock"
      >
        title
      </span>
      <span
        class="MuiTypography-root MuiListItemText-secondary MuiTypography-caption MuiTypography-colorTextSecondary MuiTypography-displayBlock"
      >
        description
      </span>
    </div>
    <span
      class="MuiTouchRipple-root"
    />
  </div>
</div>
`;
